--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,11 +8,11 @@
 		"preview": "vite preview"
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-static": "^3.0.2",
-		"@sveltejs/kit": "^2.0.0",
-		"@sveltejs/vite-plugin-svelte": "^3.0.0",
-		"svelte": "^5.0.0-next.1",
-		"vite": "^5.0.3"
+		"@sveltejs/adapter-static": "^3.0.4",
+		"@sveltejs/kit": "^2.5.27",
+		"@sveltejs/vite-plugin-svelte": "^4.0.0-next.6",
+		"svelte": "^5.0.0-next.246",
+		"vite": "^5.4.5"
 	},
 	"type": "module"
 }
